--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,8 @@
 	"extensions": [
         "GitHub.vscode-pull-request-github",
         "ms-python.python",
-        "ms-python.vscode-pylance",
+		"ms-python.vscode-pylance",
+		"getgauge.gauge",
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
