Add Python linting checks using Black
[Black][1] is an opinionated Python formatter.

[1]: https://black.readthedocs.io/

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -15,3 +15,13 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
+
+  linter_name:
+    name: runner / black formatter
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: reviewdog/action-black@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-check
