--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,11 +2,14 @@
 on:  # yamllint disable-line rule:truthy
   push:
 
-name: Tests
+name: Gauge
 jobs:
   tests:
-    name: Gauge Specs
+    name: ${{ matrix.gauge-env }} server
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        gauge-env: [default, mock]
     steps:
 
       - name: Checkout code
@@ -28,12 +31,6 @@ jobs:
       - name: Generate OpenAPI Python SDK client
         run: openapi-generator-cli generate -i openapi.yaml -g python -o ./python-client-generated
 
-      - name: Install Prism
-        run: npm install -g @stoplight/prism-cli
-
-      - name: Start Prism
-        run: prism mock openapi.yaml &
-
       - name: Set up Python
         uses: actions/setup-python@v2
 
@@ -46,8 +43,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Gauge specs against real OpenAPI server
-        run: gauge run specs
+      - name: Install Prism
+        run: npm install -g @stoplight/prism-cli
+        if: matrix.gauge-env == 'mock'
 
-      - name: Run Gauge specs against mock OpenAPI server
-        run: gauge run --env mock specs
+      - name: Start Prism
+        run: prism mock openapi.yaml &
+        if: matrix.gauge-env == 'mock'
+
+      - name: Run Gauge specs against ${{ matrix.gauge-env }} OpenAPI server
+        run: gauge run --env ${{ matrix.gauge-env }} specs
