Run Gauge specs every night at 3am
This is as well as running on them on every push, which we continue to
do.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,9 @@
 ---
 on:  # yamllint disable-line rule:truthy
+  # Run the tests on every push, and also at 3am every night
   push:
+  schedule:
+    - cron: '0 3 * * *'  # * is a special character in YAML so you have to quote this string
 
 name: Gauge
 jobs:
