--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,11 @@
 ---
+name: Gauge specs
 on:  # yamllint disable-line rule:truthy
   # Run the tests on every push, and also at 3am every night
   push:
   schedule:
     - cron: '0 3 * * *'  # * is a special character in YAML so you have to quote this string
 
-name: Gauge
 jobs:
   tests:
     name: ${{ matrix.gauge-env }} server
